<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Myhomework1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="age">Age</string>
    <string name="btn1">Name</string>
    <string name="btn2">Lastname</string>
    <string name="btn3">Age</string>
    <string name="btn4">Image</string>
    <string name="title_activity_name">NameActivity</string>
    <string name="title_activity_lastname">LastnameActivity</string>
    <string name="title_activity_age">AgeActivity</string>
    <string name="title_activity_image">ImageActivity</string>
    <color name="fontColor">#FF000000</color>

</resources>
